--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ html {
 
 /* Navbar */
 .navbar {
-    position: relative;
+    position: absolute;
     width: 100%;
     z-index: 100;
     padding: 2rem 0;
@@ -118,7 +118,7 @@ html {
 /* Hero Section */
 .hero {
     position: relative;
-    min-height: calc(100vh - var(--navbar-height));
+    min-height: calc(100vh);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -346,6 +346,7 @@ html {
         opacity: 0;
         transform: translateY(30px);
     }
+
     to {
         opacity: 1;
         transform: translateY(0);
@@ -356,6 +357,7 @@ html {
     from {
         opacity: 0;
     }
+
     to {
         opacity: 1;
     }
@@ -366,6 +368,7 @@ html {
         opacity: 0;
         transform: translateX(-50px);
     }
+
     to {
         opacity: 1;
         transform: translateX(0);
